--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,1 +1,6 @@
 // place your custom styles here
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
+
+:root {
+    --font-family: 'Noto Sans TC', sans-serif !important;
+}
